Wed Mar 10 20:51:54 CET 2004 (tk)
---------------------------------
  * doc: + Polish sendmail_clamav how-to updated (Przemyslaw Holowczyc
	   <doozer*skc.com.pl>)
	 + included new Polish how-to on ClamAV and Samba integration (by
	   Przemyslaw Holowczyc)

Wed Mar 10 20:06:35 CET 2004 (tk)
---------------------------------
  * doc: clamav-mirror-howto.pdf and signatures.pdf updated

Wed Mar 10 12:58:55 GMT 2004 (trog)
-----------------------------------
  * clamd/server-th.c: error handling
  * libclamav/ole2_extract.c: change struct pack code to support
	old versions of gcc - for the last time I hope.

Wed Mar 10 11:40:14 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Use new HAVE_STRERROR_R rather than TARGET_OS_SOLARIS
 			to determine if strerror_r exists
			Thanks to Phil Oleson <oz@nixil.net>.
  * docs/man:		Corrected documentation of --postmaster-only flag.

Wed Mar 10 05:43:34 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Implemented a couple of small speed ups:
  	1) Only save arguments that we're going to retrieve
	2) No need to store \n in messageToText fast copy mode, which allows
		an sprintf to be removed (Dirk Mueller <dmuell@gmx.net>)

Wed Mar 10 01:35:40 CET 2004 (tk)
---------------------------------
  * libclamav: unrarlib: cleanup (Dirk Mueller <dmuell*gmx.net>)

Tue Mar  9 23:49:06 CET 2004 (tk)
---------------------------------
  * libclamav, sigtool: small code cleanups (Dirk Mueller <mueller*kde.org>)
  * libclamav: unrarlib: properly detect little endian (Dirk Mueller)
  * clamscan: do not print "Excluded" messages with -i (reported by Gordon E.)

Tue Mar  9 12:36:10 GMT 2004 (trog)
-----------------------------------
  * clamd/others.c: fix includes

Mon Mar  8 22:26:48 CET 2004 (tk)
---------------------------------
  * clamav-milter: fixed a typo in Makefile

Mon Mar  8 12:37:26 GMT 2004 (trog)
-----------------------------------